@@ -10,6 +10,11 @@ console-setup (1.36) UNRELEASED; urgency=low
     source of the default value.
   * Simply execute the config script in udebs postinst, do not source.
     Thanks to Christian Perrier, closes: #439633.
+  * Use 'type' builtin instead of the 'which' tool that is not available
+    in d-i.  Thanks to Samuel Thibauld for the suggestion.
+  * Use /bin/sh as shell for the config script (instead of /bin/bash).
+    Make the script /usr/share/console-setup-mini executable.  Thanks to
+    Christian Perrier for the testing and finding these problems.
 
   [ Debconf translations ]
   * Spanish. Closes: #529031
